--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,27 @@
-# Node / TypeScript
-node_modules/
-dist/
-coverage/
-typechain-types/
+# secrets
+.env
+.env.*.local
 
-# Hardhat artifacts & cache
+# dependencies
+node_modules/
+
+# hardhat build stuff
 artifacts/
 cache/
+coverage/
+typechain/
+broadcast/
+ignition/deployments/
 
-# Env & secrets
-.env
-.env.*
+# editors & OS
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
 
-# Logs
+# package managers
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# VS Code
-.vscode/
-
-# Hardhat Ignition default folder for deployments against a local node
-ignition/deployments/chain-31337/
+pnpm-debug.log*
+.pnpm-store/
